crates/core/src/commands/transcode/tests/snapshots/caesura__commands__transcode__tests__rename_tracks_tests__transcode_rename_tracks_double_digit_padding.snap
---
source: crates/core/src/commands/transcode/tests/rename_tracks_tests.rs
expression: snapshot
---
- directory: "Rename Artist - Double Digit Album [2024] [WEB 320]"
  filename: 01 Track One.mp3
  size: 2604846
  sha256: e85f0d00696558117c320e709d983ddd4edbcfa6513b7e4a4a9a53e819ab001d
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB 320]"
  filename: 02 Track Two.mp3
  size: 2604846
  sha256: 04921710be0519d6f3a00345ebf13b9e6adc74be1344145c78d246fbba7db337
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB 320]"
  filename: 03 Track Three.mp3
  size: 2604848
  sha256: 901f6a2a9a78673a428036af50c8b38a7c5da964a6517cb4238d30963fc61ea7
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "3"
        TrackTitle: Track Three
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB 320]"
  filename: 04 Track Four.mp3
  size: 2604847
  sha256: 35bb76711edd3b7940ad9f1560583beafa8fa4fa4ca8161f5a4e5550e7e18e31
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "4"
        TrackTitle: Track Four
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB 320]"
  filename: 05 Track Five.mp3
  size: 2604847
  sha256: f79af7138a418f7bc4c90b33640b34564a3b398223724fc708f79bc69e9c7341
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "5"
        TrackTitle: Track Five
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB 320]"
  filename: 06 Track Six.mp3
  size: 2604846
  sha256: e95dd28b17438bdcdaca50f95b558e96977c635960a8a561ef3a05bbf11a5c49
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "6"
        TrackTitle: Track Six
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB 320]"
  filename: 07 Track Seven.mp3
  size: 2604848
  sha256: d1d876d2f983d5c243b92517ee6d0a47f8f28130df772c152088fb1bd3a2f836
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "7"
        TrackTitle: Track Seven
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB 320]"
  filename: 08 Track Eight.mp3
  size: 2604848
  sha256: 7062ab70e34ab74b7b149b2c0bc384f79c2072fa26368887b47a9b857ba41e43
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "8"
        TrackTitle: Track Eight
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB 320]"
  filename: 09 Track Nine.mp3
  size: 2604847
  sha256: 8b58a091f7d9c2c5dae756221765f8425af8673785cf31284a13caa988586396
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "9"
        TrackTitle: Track Nine
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB 320]"
  filename: 10 Track Ten.mp3
  size: 2604847
  sha256: 305fbffd474011000e13cd7af6691ead8dc0f98c8e03f01a825208feeb9b6510
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "10"
        TrackTitle: Track Ten
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB 320]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
- directory: "Rename Artist - Double Digit Album [2024] [WEB V0]"
  filename: 01 Track One.mp3
  size: 613370
  sha256: e4483d67925ffae5fdf99801d2fa424e5ebb536d1f0351af9315a4c80e325e31
  audio:
    duration_ms: 65045
    overall_bitrate: 75
    audio_bitrate: 75
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB V0]"
  filename: 02 Track Two.mp3
  size: 693392
  sha256: b6b2490ea30623f29a678089d379ba058cbf1d47dc19eb1cde140d48ae8ce395
  audio:
    duration_ms: 65045
    overall_bitrate: 85
    audio_bitrate: 85
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB V0]"
  filename: 03 Track Three.mp3
  size: 827687
  sha256: aaf9867e2f4a12b38e26faa043cc19b7d68585b618f9bea9728c9400e197a414
  audio:
    duration_ms: 65045
    overall_bitrate: 101
    audio_bitrate: 101
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "3"
        TrackTitle: Track Three
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB V0]"
  filename: 04 Track Four.mp3
  size: 813959
  sha256: 419e3db62693cc81f89288755d767ffd6af786fbeb0cbbea021dc295dbcfbf85
  audio:
    duration_ms: 65045
    overall_bitrate: 100
    audio_bitrate: 99
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "4"
        TrackTitle: Track Four
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB V0]"
  filename: 05 Track Five.mp3
  size: 729875
  sha256: 50646267c62f01afc27df670e4005daa83e0cd195088e91b16f8cd47846824c2
  audio:
    duration_ms: 65045
    overall_bitrate: 89
    audio_bitrate: 89
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "5"
        TrackTitle: Track Five
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB V0]"
  filename: 06 Track Six.mp3
  size: 827218
  sha256: 735af2620b2cafd6e1ff16492159a90e13eec96877b939a752af5a79682e6fe3
  audio:
    duration_ms: 65045
    overall_bitrate: 101
    audio_bitrate: 101
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "6"
        TrackTitle: Track Six
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB V0]"
  filename: 07 Track Seven.mp3
  size: 847578
  sha256: 723113cba566b5c8a5737389a0345b74af9e82dda4843379178bfb063d5c148f
  audio:
    duration_ms: 65045
    overall_bitrate: 104
    audio_bitrate: 103
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "7"
        TrackTitle: Track Seven
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB V0]"
  filename: 08 Track Eight.mp3
  size: 683223
  sha256: 19f085b523cdd0c2d14f8e1360ee14ec27ab4418aac60cb74528416ddb19c689
  audio:
    duration_ms: 65045
    overall_bitrate: 84
    audio_bitrate: 83
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "8"
        TrackTitle: Track Eight
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB V0]"
  filename: 09 Track Nine.mp3
  size: 830859
  sha256: 9bd160decd4bdc3803cff34fdc64862037a0dfc76773080661f69f423a552dce
  audio:
    duration_ms: 65045
    overall_bitrate: 102
    audio_bitrate: 101
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "9"
        TrackTitle: Track Nine
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB V0]"
  filename: 10 Track Ten.mp3
  size: 824124
  sha256: d6cba81640e88d82b2c98f306343cd1862aaf93dae636e3becb13d4456c82334
  audio:
    duration_ms: 65045
    overall_bitrate: 101
    audio_bitrate: 101
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Double Digit Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "10"
        TrackTitle: Track Ten
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Double Digit Album [2024] [WEB V0]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
