crates/core/src/commands/transcode/tests/snapshots/caesura__commands__transcode__tests__rename_tracks_tests__transcode_rename_tracks_multi_disc.snap
---
source: crates/core/src/commands/transcode/tests/rename_tracks_tests.rs
expression: snapshot
---
- directory: "Rename Artist - Multi Disc Album [2024] [WEB 320]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
- directory: "Rename Artist - Multi Disc Album [2024] [WEB 320]/CD1"
  filename: 1 First Track.mp3
  size: 2604858
  sha256: ef520c51fa59cdb03c30cd6c8c355515b8ee7c1d80dc8ec62656f628b6956b73
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album
        DiscNumber: "1"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "1"
        TrackTitle: First Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Multi Disc Album [2024] [WEB 320]/CD1"
  filename: 2 Second Track.mp3
  size: 2604859
  sha256: 0d57450dccc4acb71193db563efa9366fef925071ef1dc9cc3657ddd35b093b0
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album
        DiscNumber: "1"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "2"
        TrackTitle: Second Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Multi Disc Album [2024] [WEB 320]/CD2"
  filename: 1 Third Track.mp3
  size: 2604858
  sha256: 256d596bc194297834ced144407a5769e13f2c4d5d1e30d909db21d397678c2e
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album
        DiscNumber: "2"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "1"
        TrackTitle: Third Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Multi Disc Album [2024] [WEB 320]/CD2"
  filename: 2 Fourth Track.mp3
  size: 2604859
  sha256: ebb6043dafba046d937674a9deb09c6b5b601aed9793f9297e29589caeca3c45
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album
        DiscNumber: "2"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "2"
        TrackTitle: Fourth Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Multi Disc Album [2024] [WEB V0]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
- directory: "Rename Artist - Multi Disc Album [2024] [WEB V0]/CD1"
  filename: 1 First Track.mp3
  size: 786228
  sha256: 4288ead941f7a62cccfd615e5c4492bd8c30a8134b3f6331a46529b2085d36f4
  audio:
    duration_ms: 65045
    overall_bitrate: 96
    audio_bitrate: 96
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album
        DiscNumber: "1"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "1"
        TrackTitle: First Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Multi Disc Album [2024] [WEB V0]/CD1"
  filename: 2 Second Track.mp3
  size: 764882
  sha256: bcd68aabd24e60fd1da4c821be51a238c80b49726d016b5e12970035e812cce4
  audio:
    duration_ms: 65045
    overall_bitrate: 94
    audio_bitrate: 93
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album
        DiscNumber: "1"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "2"
        TrackTitle: Second Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Multi Disc Album [2024] [WEB V0]/CD2"
  filename: 1 Third Track.mp3
  size: 784901
  sha256: 872a52b1f8e548fceed5ba9f3867f66197c7320c4703d2143d23b41e5f31b203
  audio:
    duration_ms: 65045
    overall_bitrate: 96
    audio_bitrate: 96
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album
        DiscNumber: "2"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "1"
        TrackTitle: Third Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Multi Disc Album [2024] [WEB V0]/CD2"
  filename: 2 Fourth Track.mp3
  size: 755730
  sha256: c5fc7eca6a03f52911df32db3ece61dbbedf8f60fe3500e6937ceae4d297d874
  audio:
    duration_ms: 65045
    overall_bitrate: 92
    audio_bitrate: 92
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album
        DiscNumber: "2"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "2"
        TrackTitle: Fourth Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
