crates/core/src/commands/transcode/tests/snapshots/caesura__commands__transcode__tests__rename_tracks_tests__transcode_rename_tracks_multi_disc_flat_source.snap
---
source: crates/core/src/commands/transcode/tests/rename_tracks_tests.rs
expression: snapshot
---
- directory: "Rename Artist - Multi Disc Album Flat [2024] [WEB 320]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
- directory: "Rename Artist - Multi Disc Album Flat [2024] [WEB 320]/CD1"
  filename: 1 First Track.mp3
  size: 2604863
  sha256: fbe27932ac38ff6baeae2eb91a23e93c4dc1e59a0c58d68c729044a6b6ac4e81
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album Flat
        DiscNumber: "1"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "1"
        TrackTitle: First Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Multi Disc Album Flat [2024] [WEB 320]/CD1"
  filename: 2 Second Track.mp3
  size: 2604864
  sha256: 1a29eff53837d745caa3443d9e294fa804b4567cd94bd680defe2cb750f102c7
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album Flat
        DiscNumber: "1"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "2"
        TrackTitle: Second Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Multi Disc Album Flat [2024] [WEB 320]/CD2"
  filename: 1 Third Track.mp3
  size: 2604863
  sha256: 9621aa46a4ca8f0cfd6d9e853a9d82333bd387c993031dc529a4da18ab1e9a9e
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album Flat
        DiscNumber: "2"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "1"
        TrackTitle: Third Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Multi Disc Album Flat [2024] [WEB 320]/CD2"
  filename: 2 Fourth Track.mp3
  size: 2604864
  sha256: 700b03d073f4d57e48294aa028871460fd2b5c4ad442e3a7ba99e21b40657669
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album Flat
        DiscNumber: "2"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "2"
        TrackTitle: Fourth Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Multi Disc Album Flat [2024] [WEB V0]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
- directory: "Rename Artist - Multi Disc Album Flat [2024] [WEB V0]/CD1"
  filename: 1 First Track.mp3
  size: 786233
  sha256: 6da9b01f49ab7d76307f9f1de4a972883e3a351f9358334437e52a7a5ff3b9ac
  audio:
    duration_ms: 65045
    overall_bitrate: 96
    audio_bitrate: 96
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album Flat
        DiscNumber: "1"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "1"
        TrackTitle: First Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Multi Disc Album Flat [2024] [WEB V0]/CD1"
  filename: 2 Second Track.mp3
  size: 764887
  sha256: fb280112f0de09774235682c09cce7557e4b5445f8d661ddf287d7bf5e180bd4
  audio:
    duration_ms: 65045
    overall_bitrate: 94
    audio_bitrate: 93
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album Flat
        DiscNumber: "1"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "2"
        TrackTitle: Second Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Multi Disc Album Flat [2024] [WEB V0]/CD2"
  filename: 1 Third Track.mp3
  size: 784906
  sha256: 1ffba4058d09c785da06375272fcea4dcf77eb299a088a1f5de9446d83c70d82
  audio:
    duration_ms: 65045
    overall_bitrate: 96
    audio_bitrate: 96
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album Flat
        DiscNumber: "2"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "1"
        TrackTitle: Third Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Multi Disc Album Flat [2024] [WEB V0]/CD2"
  filename: 2 Fourth Track.mp3
  size: 755735
  sha256: 7fdec1060d7e85709b124baf2f6f75dc306b43951ce3c70ed633f115b3ca208b
  audio:
    duration_ms: 65045
    overall_bitrate: 92
    audio_bitrate: 92
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Multi Disc Album Flat
        DiscNumber: "2"
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "2"
        TrackTitle: Fourth Track
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
