crates/core/src/commands/transcode/tests/snapshots/caesura__commands__transcode__tests__rename_tracks_tests__transcode_rename_tracks_of_total_numbering.snap
---
source: crates/core/src/commands/transcode/tests/rename_tracks_tests.rs
expression: snapshot
---
- directory: "Rename Artist - Of Total Album [2024] [WEB 320]"
  filename: 1 First Track.mp3
  size: 2604846
  sha256: 7c045e28cd8ed90bdb16e31d81ddd99a15bbb10d23039dd058a43ef1e694cb95
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Of Total Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "1"
        TrackTitle: First Track
        TrackTotal: "4"
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Of Total Album [2024] [WEB 320]"
  filename: 2 Second Track.mp3
  size: 2604847
  sha256: 67bc1b4a64c500e358c1451599cc3826dcd27f6e534b968e671f79d85e35fafa
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Of Total Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "2"
        TrackTitle: Second Track
        TrackTotal: "4"
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Of Total Album [2024] [WEB 320]"
  filename: 3 Third Track.mp3
  size: 2604846
  sha256: 787ac9fca95e8d84a04feac3f12ceaffee6335119eb5cb6735b534cef42cb4db
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Of Total Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "3"
        TrackTitle: Third Track
        TrackTotal: "4"
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Of Total Album [2024] [WEB 320]"
  filename: 4 Fourth Track.mp3
  size: 2604847
  sha256: 702e24899490bfafc5212202bb65590bdb2984b6da577f1b9717f4dec230479f
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Of Total Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "4"
        TrackTitle: Fourth Track
        TrackTotal: "4"
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Of Total Album [2024] [WEB 320]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
- directory: "Rename Artist - Of Total Album [2024] [WEB V0]"
  filename: 1 First Track.mp3
  size: 786216
  sha256: 6f4360ad670dee0d919c46846893f369bdf215e388e68c3cfcd5ba9d831cbf07
  audio:
    duration_ms: 65045
    overall_bitrate: 96
    audio_bitrate: 96
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Of Total Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "1"
        TrackTitle: First Track
        TrackTotal: "4"
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Of Total Album [2024] [WEB V0]"
  filename: 2 Second Track.mp3
  size: 764870
  sha256: ea3a7a05e1062409295bc7a0c233a54e71636a4f84f760df06b09a53717a5543
  audio:
    duration_ms: 65045
    overall_bitrate: 94
    audio_bitrate: 93
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Of Total Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "2"
        TrackTitle: Second Track
        TrackTotal: "4"
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Of Total Album [2024] [WEB V0]"
  filename: 3 Third Track.mp3
  size: 784889
  sha256: 15ccddc1af98b94fc54d8957c7ae14802e5d68725c637cc286057477d9f2fb1c
  audio:
    duration_ms: 65045
    overall_bitrate: 96
    audio_bitrate: 96
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Of Total Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "3"
        TrackTitle: Third Track
        TrackTotal: "4"
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Of Total Album [2024] [WEB V0]"
  filename: 4 Fourth Track.mp3
  size: 755718
  sha256: 523f3512482b7506aebeb48c5e98c19bb68cb8c5c3aaadc8f895a3753181fb19
  audio:
    duration_ms: 65045
    overall_bitrate: 92
    audio_bitrate: 92
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Of Total Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "4"
        TrackTitle: Fourth Track
        TrackTotal: "4"
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Of Total Album [2024] [WEB V0]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
