crates/core/src/commands/transcode/tests/snapshots/caesura__commands__transcode__tests__rename_tracks_tests__transcode_rename_tracks_single_disc.snap
---
source: crates/core/src/commands/transcode/tests/rename_tracks_tests.rs
expression: snapshot
---
- directory: "Rename Artist - Single Disc Album [2024] [WEB 320]"
  filename: 1 Track One.mp3
  size: 2604845
  sha256: bac1b429209c39f1d0193b6b51f1466c6f477b50c41be64af272846ab4e9bc50
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Single Disc Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Single Disc Album [2024] [WEB 320]"
  filename: 2 Track Two.mp3
  size: 2604845
  sha256: 7b0b6ec27b551a95cd3d0c4611398a71a41fd4baadd1a0c9ae5f0e3a6df8f152
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Single Disc Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Single Disc Album [2024] [WEB 320]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
- directory: "Rename Artist - Single Disc Album [2024] [WEB V0]"
  filename: 1 Track One.mp3
  size: 786215
  sha256: cb3bc5949befbd62739d7b57db568cc3db13ca892de66f1f41dba13d507ea638
  audio:
    duration_ms: 65045
    overall_bitrate: 96
    audio_bitrate: 96
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Single Disc Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Single Disc Album [2024] [WEB V0]"
  filename: 2 Track Two.mp3
  size: 737309
  sha256: 0d275bcb267de6ae92e8b7f747905b846946848a904080ae405030cbf8b3d746
  audio:
    duration_ms: 65045
    overall_bitrate: 90
    audio_bitrate: 90
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Single Disc Album
        RecordingDate: "2024"
        TrackArtist: Rename Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Rename Artist - Single Disc Album [2024] [WEB V0]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
